# mixpanel-component

./: .gitignore  Cargo.toml  Makefile  README.md  component.wasm  edgee-component.toml
.github/workflows/: check.yml  ci.yml  wasm-build-release.yml
src/: helpers.rs  lib.rs
